syntax = "proto3";

package fr.unice.polytech.soa.team.j.bluegalacticx.anomaly;

option java_multiple_files = true;
option java_package =
    "fr.unice.polytech.soa.team.j.bluegalacticx.anomaly.proto";

message AnomalyRequest {
  enum AnomalyType {
    AWAY_FROM_TRAJECTORY = 0; OVERHEATING = 1; FAILED_TO_ENTRY_BURN = 2;
    FAILED_TO_DETACH = 3;
  }
  enum ModuleType { ROCKET = 0; BOOSTER = 1; }
  AnomalyType anomalyType = 1;
  ModuleType moduleType = 2;
  string moduleId = 3;
}
